sites/all/themes/sigmah_theme/new_css/style.css
/* ... */
#content .right_content ul li.first-child {
	border-top:1px dashed #f3e1b3;
}

#content .right_content ul li.baseline span.jaune, #content .right_content ul li.baseline {
	font-size:11px;
}

.commentaire {
	padding:5px 0 5px 0;
	border-top:1px dashed #F4AB0B;
	margin:5px 0;
	overflow:hidden;
	}
	
.commentaires hr {
	border-color:#F4AB0B;
}

.content_comment {
	margin:10px 0;
}

#content  .top_content_comment, #content .top_content_comment a {
	color:#503227;
	text-decoration:none;
}

#content .top_comment {
	padding-left:17px;
	background:url(../img/feuille.jpg) left center no-repeat;
	font-size:11px;

}

#content .addComment, #content .pseudo_comment {
	color:#503227;
}

a.forum-post-10{
  background-image: url("../img/Etoile-blanche.png");
  background-position:left center;
  background-repeat:no-repeat;
  padding-left:2.5em;
}

a.forum-post-50{
  background-image: url("../img/Etoile-taupe.png");
  background-position:left center;
  background-repeat:no-repeat;
  padding-left:2.5em;
}

a.forum-post-100 {
  background-image:url("../img/Etoile-orange.png");
  background-position:left center;
  background-repeat:no-repeat;
  padding-left:2.5em;
}
	
.linkWiki a {
	margin-left:20px;
}

.commentaires {
	margin-top:30px;
}


/*plan*/

#content .plan_wiki h5  {
	background:#fff4d8 url("../img/top_plan.jpg") no-repeat left top;
	height:auto;
	margin:0;
	padding:15px 0 0 25px;
	width:248px;
	color: #855C41;
}


.contentWikiPlan {
	padding:1px 15px;
	width:243px;
	background:#fff4d8;
	font-size:12px;
}

.contentWikiPlan ol {
	list-style:none;
	color:#503227;
	margin:10px 0 10px 10px;
}

#content .contentWikiPlan ol li {
	margin:5px 0;
}
#content .plan_wiki ol li a {
	color:#503227;
	font-weight:bold;
	text-decoration:none;
}

#content .plan_wiki ol li ol li a {
	font-weight:normal;
}

#content .plan_wiki ol li a:hover {
	text-decoration:underline;
}

.bottomWikiPlan {
	background:#fff4d8 url("../img/bottom_plan.jpg") no-repeat left bottom;
	height:10px;
	margin:0;
	padding:0px 0 0 25px;
	width:248px;
}

.dotted .miseenavant {
	margin:10px 0 0 0px;
}

#left .dotted .baseline {
	line-height:20px;
}

#header #titre, #header_home #title {position:absolute;
z-index:0;

}

#header #log-zone {z-index:100;}

#video {
	display:block;
	text-indent:-9999px;
	background:url(../img/video.png) no-repeat bottom left;
	height:126px;
	width:226px;
	margin:7px 0;
}

.right a:hover {
	text-decoration:underline;
}

#video:hover {
	background:url(../img/video.png) no-repeat top left;
}



#content #center .lien_puce li a:hover {
	text-decoration:underline;
}

#main_content {
	padding-top:4px;
}

#content .main_content_wiki {
	padding-top:18px;
}

#log-zone a:hover {
	text-decoration:underline;
}

#content #center .first_li {
	padding-top:0px;
	background:url("../img/puce_li.png") no-repeat scroll left -28px transparent;
}



#content .baseline.right a:hover {
text-decoration:none;
}

#content .espace .right a:hover {
	text-decoration:underline;
}


/** Custom CSS addition by spM **/

/** Handling Blockquote rendering as discussed in issue : http://www.sigmah.org/issues/view.php?id=328 **/

blockquote {
background: #fff4D8;
padding : 1px 20px;
padding-top : 15px;
padding-botton : 15px;
border-left : #f6b034 1px solid;
border-right : #f6b034 1px solid;
width : 100%;
-webkit-border-radius: 15px;
-moz-border-radius: 15px;
border-radius: 15px;
}

